--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,30 @@
-. body {
+body {
 	background-color: black;
+	text-align: center;
+	font-family: verdana, calibri;
+}
+
+h1 {
+	color: white;
+	font-size: 50px;
+	font-weight: normal;
+}
+
+h2 {
+	font-weight: 300;
+	font-size: 42px;
+}
+
+p {
+	font-size: 21px;
+	color: grey;
+}
+
+a {
+	color:aquamarine;
+	font-size: 16px;
+}
+
+.copyright {
+	text-align: right;
 }
